k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-backend-deployment
  namespace: tasklist-ns
  labels:
    app: tasklist-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasklist-backend
  template:
    metadata:
      labels:
        app: tasklist-backend
    spec:
      containers:
        - name: tasklist-backend
          image: anssuy1/tasklist-backend:6716b321ecfafbdfa40ace11381614068f956258
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
