k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-backend-service
  namespace: tasklist-ns
  labels:
    app: tasklist-backend
spec:
  selector:
    app: tasklist-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
