k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-frontend-service
  namespace: tasklist-ns
  labels:
    app: tasklist-frontend
spec:
  selector:
    app: tasklist-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
