k8s/headless-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-db-service 
  namespace: tasklist-ns
  labels:
    app: tasklist-db
spec:
  ports:
    - port: 5432 
      targetPort: 5432
      name: postgres
  selector:
    app: tasklist-db 
  clusterIP: None
