k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklist-ingress
  namespace: tasklist-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tasklist.mk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasklist-frontend-service
            port:
              number: 80
